--- a/style.css
+++ b/style.css
@@ -20,6 +20,11 @@
 
 .maincontent{
     grid-area: 2,1,3,2;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    color: black;
+    z-index: 2;
 }
 
 .maincontent::before{
