--- a/style.css
+++ b/style.css
@@ -20,28 +20,14 @@
 
 .maincontent{
     grid-area: 2,1,3,2;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    color: black;
-    z-index: 2;
-}
-
-.maincontent::before{
-    content: "";
     background-image: url(pink\ toy.jpg);
     background-size: cover;
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
     opacity: 0.5;
     z-index: 1;
 }
 
 footer{
     grid-area: 3,1,4,2;
-    background-color: lightcoral;
+    background-color: black;
     z-index: 2;
 }
